# real-time-object-detection

./: .gitignore  README.md  docker-compose.yml  requirements.txt
assets/: config_template.pbtxt
client-deepstream/: Dockerfile  README.md  config_infer_yolov9.txt  deepstream_app_config.txt  docker-compose.yml  export_yolo_deepstream.py  requirements.txt
client-triton/: README.md  docker-compose-kafka.yml  docker-compose.yml  requirements.txt  run_local.sh
client-triton/client/: Cargo.toml
client-triton/client/secrets/: .env_example  config.yaml  example.yaml
client-triton/client/src/: client_video.rs  config.rs  inference.rs  lib.rs  main.rs  processing.rs  source.rs  stream_client.rs  utils.rs
client-triton/client/src/inference/: processing.rs  queue.rs  source.rs
client-triton/client/src/legacy/: main.rs  processing.rs
client-triton/client/src/processing/: dino.rs  dinov2.rs  preprocessing.rs  yolo.rs
client-triton/client/src/secrets/: .env_example  .env_office  .env_test  minio_credentials.json  minio_credentials_office.json
client-triton/client/src/tests/: main.rs  throughput.rs
client-triton/client/src/utils/: config.rs  kafka.rs  queue.rs  s3.rs
model-optimization/: README.md  export_model.py  export_utils.py  requirements.txt
model_optimization/: README.md  export_dinov3.py  export_model.py  export_optimized_model.py  export_utils.py  export_yolov9.py  requirements.txt  rope_tensorrt_patch.py
scripts/: convert_onnx_yolo.py  display_model_throughput.ipynb  display_model_video_streams.ipynb  test_model_optimal_point.py  (+2 more)
(+74 files in other folders)
